# reasoning-with-samples-efficient

./: .gitignore  BEAM_SEARCH_IMPLEMENTATION.md  BEAM_VALIDATION_ENTROPY.md  PIPELINE.md  QUICK_START.md  README.md  VALIDATION_QUICK_START.md  VALIDATION_SUMMARY.md  analyze_beam_validation.py  pyproject.toml  test_beam_validation.py
chat-ui/: .env.example  CHANGELOG.md  LAYOUT.md  README.md  app.py  app.py.bak
docs/: BEAM_SEARCH_API_README.md  BEAM_SEARCH_EXP_README.md  BEAM_SEARCH_GROK_SUMMARY.md
llm_experiments/: beam_search_math.py  beam_search_utils.py  eval_he.py  eval_math.py  passk_he.py  power_samp_alpaca.py  power_samp_gpqa.py  power_samp_he.py  power_samp_math.py  power_samp_utils.py  test_beam_search.py
predictions/: gsm8k_grok_2_1212_Greedy.jsonl  gsm8k_grok_2_Greedy.jsonl  gsm8k_grok_4_1_fast_non_reasoning_Greedy.jsonl  gsm8k_grok_4_1_fast_non_reasoning_MCMC_α1.67_steps10_B192.jsonl  gsm8k_grok_4_1_fast_non_reasoning_MCMC_α2.0_steps5_B32.jsonl  gsm8k_grok_4_1_fast_non_reasoning_MCMC_α4.0_steps10_B16.jsonl  gsm8k_grok_4_1_fast_non_reasoning_MCMC_α4.0_steps10_B32.jsonl  gsm8k_grok_4_1_fast_non_reasoning_MCMC_α4.0_steps5_B128.jsonl  gsm8k_grok_4_1_fast_non_reasoning_MCMC_α4.0_steps5_B192.jsonl  gsm8k_grok_4_1_fast_non_reasoning_MCMC_α4.0_steps5_B32.jsonl  gsm8k_grok_4_1_fast_non_reasoning_ParallelMCMC_α1.67_steps5_B192_N8.jsonl  gsm8k_grok_4_1_fast_non_reasoning_ParallelMCMC_α2.0_steps1_B128_N8.jsonl  gsm8k_grok_4_1_fast_non_reasoning_ParallelMCMC_α4.0_steps5_B32_N8.jsonl  humaneval_grok_4_1_fast_non_reasoning_Greedy.jsonl  humaneval_grok_4_1_fast_non_reasoning_MCMC_α4.0_steps5_B32.jsonl  humaneval_grok_4_1_fast_non_reasoning_ParallelMCMC_α1.67_steps5_B192_N8.jsonl  swe_bench_lite_grok_4_1_fast_non_reasoning_Greedy.jsonl  swe_bench_lite_grok_4_1_fast_non_reasoning_Greedy_run1.jsonl  swe_bench_lite_grok_4_1_fast_non_reasoning_MCMC_α1.67_steps5_B192.jsonl
results/: swe_bench_lite_grok_4_1_fast_non_reasoning_Greedy_run1_results.json  swe_bench_lite_grok_4_1_fast_non_reasoning_MCMC_α1.67_steps5_B192_results.json
scripts/: evaluate_all.sh  modal_evaluate.py
src/: ASYNC_BEAM_SEARCH_README.md  ASYNC_FIX_SUMMARY.md  EVAL_SCRIPT_UPDATE_SUMMARY.md  LENGTH_PENALTY_EXPERIMENTS.md  PARALLEL_EXPERIMENTS_README.md  QUICK_START.md  README.md  TRUE_BEAM_SEARCH_IMPLEMENTATION.md  __init__.py  aggregate_results.py  arcagi2_benchmark.py  async_openai_client.py  beam_search_evals.sh  benchmark_runner.py  benchmark_template.py  benchmarks.py  example_usage.py  gpqa_benchmark.py  gsm8k_benchmark.py  llm_wrapper.py  math_benchmark.py  mmlu_benchmark.py  params.txt  run_benchmark.py  scorers.py  strategies.py  (+5 more)
(+74 files in other folders)
